<resources>
    <string name="app_name"></string>
    <string name="txtSoBienLai">Số biên lai : </string>
    <string name="txtNgayHP">Ngày HP : </string>
    <string name="txtMaMonHoc">Mã môn học : </string>
    <string name="txtTenMonHoc">Tên môn học : </string>
    <string name="txtSoTinChi">Số tín chỉ : </string>
    <string name="txtSoTien">Số tiền: </string>

    <!--row_listview_sv-->
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="image">image</string>

    <!--biên lai-->
    <string name="bill_number">Số biên lai</string>
    <string name="bill_date">19/3/2019</string>

    <!--thêm sinh viên-->
    <string name="hoTenSV">Họ tên: </string>
    <string name="maSV">Mã SV: </string>
    <string name="soDT">Số ĐT: </string>
    <string name="txtBtnSave">Update</string>
    <string name="txtBtnCancel">Cancel</string>

    <!--thêm mới-->
    <!--<string name="action_new">Thêm mới</string>-->
    <!--<string name="app_name">QLSV</string>-->
    <string name="action_new">Thêm mới</string>
    <string name="action_invoice">Thêm Hóa Đơn</string>
    <string name="action_invoice_info">Thêm Chi Tiết Hóa Đơn</string>
    <string name="action_edit">Sửa Thông Tin</string>
    <string name="action_delete">Xóa</string>

    <!--thêm môn học-->
    <string name="tenMH">Tên MH: </string>
    <string name="maMH">Mã MH: </string>
    <string name="soTC">Số TC: </string>
    <string name="soTien">Số Tiền: </string>

    <!--thêm hóa đơn-->
    <string name="maHoadon">Mã HĐ:  </string>
    <string name="Ngay">Ngày : </string>

</resources>
