<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">


    <ImageView
        android:src="@drawable/subject"
        android:id="@+id/imgIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:baselineAligned="false"
        android:contentDescription="@string/image"
        android:paddingLeft="10dp" />

    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textStyle="bold"
            android:text="Lập trình di động"
            android:id="@+id/txtSubName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/title"
            android:paddingLeft="10dp"
            android:textColor="#CC0033"
            android:textSize="16dp" />

        <TextView
            android:text="LTDD"
            android:id="@+id/txtSubID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text"
            android:paddingBottom="7dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#3399FF"
            android:textSize="12dp" />

        <LinearLayout
            android:paddingLeft="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Tín chỉ: "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="2"
                android:id="@+id/txtSubCreditNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="12dp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>