<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_themSV"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.vantrantrucphuong.quanlyhocphi.Activity.StudentList">

    <LinearLayout
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="16dp"
            android:gravity="center|left"
            android:layout_weight="1.75"
            android:text="Mã HĐ:  "
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/textView2"/>

        <EditText
            android:textSize="16dp"
            android:layout_weight="3.25"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/edtInvoiceID"/>
    </LinearLayout>


    <LinearLayout
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.75"
            android:gravity="center|left"
            android:text="@string/maMH"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edtMaMH"
            android:textSize="16dp"
            android:layout_weight="3.25"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="16dp"
            android:gravity="center|left"
            android:layout_weight="1.75"
            android:text="@string/soTien"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/textView3"/>

        <EditText
            android:id="@+id/edtMoney"
            android:textSize="16dp"
            android:layout_weight="3.25"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="20dp"
        android:weightSum="2"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:id="@+id/btnUpdate"
            android:layout_gravity="center"
            android:background="@drawable/bg_button"
            android:text="@string/txtBtnSave"
            android:layout_width="0dp"
            android:layout_height="35dp"/>

        <Button
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:id="@+id/btnCancel"
            android:layout_gravity="center"
            android:background="@drawable/bg_button"
            android:text="Cancel"
            android:layout_width="0dp"
            android:layout_height="35dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="20dp"
        android:weightSum="2"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    </LinearLayout>

</LinearLayout>
